# Loom

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml
backend/: pyproject.toml  ruff.toml
backend/agents/: base.py  chain.py  chat.py  file_locks.py  memory.py  runner.py  sanitize.py
backend/agents/loom/: archivist.py  enforcement.py  pipeline_graph.py  scribe.py  scribe_notes.py  sentinel.py  spider.py  spider_candidates.py  spider_linker.py  spider_lookup.py  weaver.py  weaver_helpers.py  weaver_io.py  weaver_llm.py  weaver_prompts.py  weaver_tags.py
backend/agents/shuttle/: custom.py  graph_runtime.py  researcher.py  researcher_graph.py  standup.py  standup_graph.py
backend/api/: deps.py  health.py  main.py  optional_services.py  runtime.py
backend/api/routers/: agent_models.py  agents.py  agents_registry.py  archive.py  automations.py  bridges.py  captures.py  chat.py  chat_stream.py  config.py  diagnostics.py  email_bridge.py  events.py  github_bridge.py  hardware.py  index.py  notes.py  onboarding.py  provider_auth.py  providers.py  search.py  settings.py  settings_helpers.py  traces.py  traces_disk.py  tree.py  vaults.py
backend/api/routes/: config_routes.py  onboarding_routes.py  (+2 more)
backend/bridge/: __init__.py  base.py  calendar.py  email.py  email_service.py  github.py  github_service.py  registry.py  service.py
backend/compiler/: __init__.py  compiler.py  compressor.py  counter.py  models.py  pruner.py  templates.py
backend/core/: activity.py  archive_paths.py  cache.py  capture_ingress.py  capture_jobs.py  config.py  config_io.py  defaults.py  events.py  exceptions.py  graph.py  hardware.py  model_advisor.py  note_index.py  notes.py  providers.py  rate_limit.py  secrets.py  standup_scheduler.py  trace_pg.py  trace_retention.py  traces.py  vault.py  vault_handoff.py  vault_io.py  vault_scaffold.py  watcher.py
backend/index/: indexer.py  searcher.py
backend/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  xai.py
backend/rules/: __init__.py  engine.py  models.py  parser.py
backend/scripts/: inspect_index.py  seed_demo.py  verify_index.py
backend/tests/: conftest.py  test_agent_models.py  test_api_agents.py  test_api_agents_registry.py  test_api_archive.py  test_api_automations.py  test_api_capture_jobs.py  test_api_captures.py  test_api_chat.py  test_api_config.py  test_api_e2e_smoke.py  test_api_graph.py  test_api_hardware.py  test_api_health.py  test_api_index.py  test_api_notes.py  test_api_provider_auth.py  test_api_provider_models.py  test_api_search.py  test_api_settings.py  test_api_token.py  test_api_traces.py  test_api_tree.py  test_api_vaults.py  test_base_agent.py  test_cache.py  test_calendar_bridge.py  test_calendar_sync_service.py  test_capture_ingress.py  test_capture_jobs.py  test_chain.py  test_chat.py  test_codex_provider.py  test_compiler.py  test_config.py  test_custom_agent.py  test_email_bridge.py  test_enforcement.py  test_events.py  test_github_bridge.py  (+32 more)
(+331 files in other folders)
