[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loom-backend"
version = "0.5.0"
description = "Loom — local-first AI memory system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.30",
    "watchdog>=4.0",
    "openai>=1.0",
    "anthropic>=0.39",
    "httpx>=0.27",
    # Upper bounds on the two pre-1.0 / fast-moving deps the code couples to
    # tightly (LanceDB table/Arrow APIs; LangGraph StateGraph). A new major can
    # break those silently — pin a ceiling so the bump is a deliberate review.
    "lancedb>=0.15,<1",
    "pyarrow>=17.0",
    "tiktoken>=0.7",
    "slowapi>=0.1.9",
    "cryptography>=42.0",
    "langgraph>=0.2,<2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.27",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["api", "agents", "index", "core"]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true
explicit_package_bases = true
exclude = ["tests/"]
