[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loom-backend"
version = "1.0.0"
description = "Loom — local-first AI memory system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.30",
    "watchdog>=4.0",
    "openai>=1.0",
    "anthropic>=0.39",
    "httpx>=0.27",
    "icalendar>=6.1,<7",
    "recurring-ical-events>=3.4,<4",
    # Upper bounds on the two pre-1.0 / fast-moving deps the code couples to
    # tightly (LanceDB table/Arrow APIs; LangGraph StateGraph). A new major can
    # break those silently — pin a ceiling so the bump is a deliberate review.
    "lancedb>=0.15,<1",
    "pyarrow>=17.0",
    "tiktoken>=0.7",
    "slowapi>=0.1.9",
    "cryptography>=42.0",
    "langgraph>=0.2,<2",
    # Optional-at-runtime backends (Redis response cache, Postgres trace
    # mirror). The clients are always installed; the services activate only
    # when LOOM_REDIS_URL / LOOM_DATABASE_URL are set.
    "redis>=5.0",
    "asyncpg>=0.30",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.27",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["api", "agents", "bridge", "index", "core"]

[tool.mypy]
strict = true
# Matches the deployment floor: the Docker image is python:3.12-slim and CI runs
# 3.12. (Pinning 3.11 here makes mypy reject the installed numpy stubs, which use
# the 3.12 `type` statement, before it ever checks our code.)
python_version = "3.12"
ignore_missing_imports = true
explicit_package_bases = true
exclude = ["tests/"]
